hphp/hack/test/typecheck/unassigned_tconst.php.exp
File "unassigned_tconst.php", line 4, characters 17-17:
An equals sign ('=') is expected here. (Parsing[1002])
